--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ python:
     - "3.5"
 install:
     - pip install coveralls
-script: make test
+script: coverage run -m unittest
 after_success: coveralls
