--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,6 @@ python:
     - "3.5"
 install:
     - pip install coveralls
+    - pip install termcolor
 script: coverage run -m unittest
 after_success: coveralls
